Fixed warnings.
Deprecated expressions are fixed.